refactor: ✨ api ✨